message CreateTaskRequest {
    Task task = 1;
}


message CreateTaskResponse {
    string task_name = 1;
    string task_description = 2;
    string task_deadline = 3;
    string task_status = 4;
    string task_priority = 5;
    google.protobuf.Timestamp task_createdAt = 6;
    google.protobuf.Timestamp task_updatedAt = 7;
    int64 task_id = 8;
}